--- a/stima_taxi.vcxproj
+++ b/stima_taxi.vcxproj
@@ -80,11 +80,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DrawableContainer.cpp" />
+    <ClCompile Include="DrawableManager.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DrawableContainer.hpp" />
+    <ClInclude Include="DrawableManager.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
