--- a/stima_taxi.vcxproj.filters
+++ b/stima_taxi.vcxproj.filters
@@ -18,12 +18,12 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="DrawableContainer.cpp">
+    <ClCompile Include="DrawableManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DrawableContainer.hpp">
+    <ClInclude Include="DrawableManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
