--- a/stima_taxi.vcxproj
+++ b/stima_taxi.vcxproj
@@ -50,12 +50,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Program1\SFML\SFML-2.1\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\kantor\SFML-2.1\include;C:\Program1\SFML\SFML-2.1\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Program1\SFML\SFML-2.1\lib;</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\kantor\SFML-2.1\lib;C:\Program1\SFML\SFML-2.1\lib;</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;sfml-main-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -68,32 +68,46 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>F:\ADINATA\source\library\SFML-2.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\kantor\SFML-2.1\include;F:\ADINATA\source\library\SFML-2.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>F:\ADINATA\source\library\SFML-2.1\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\kantor\SFML-2.1\lib;F:\ADINATA\source\library\SFML-2.1\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics.lib;sfml-window.lib;sfml-system.lib;sfml-main.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AnimatedSprite.cpp" />
     <ClCompile Include="Animation.cpp" />
+    <ClCompile Include="Collision.cpp" />
     <ClCompile Include="DrawableManager.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="GameEngine.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="PlayState.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
+    <ClCompile Include="TitleState.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnimatedSprite.hpp" />
     <ClInclude Include="Animation.hpp" />
+    <ClInclude Include="Collision.hpp" />
     <ClInclude Include="DrawableManager.hpp" />
+    <ClInclude Include="GameEngine.hpp" />
+    <ClInclude Include="GameState.hpp" />
+    <ClInclude Include="PlayState.hpp" />
     <ClInclude Include="ResourceManager.hpp" />
+    <ClInclude Include="TitleState.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resource\Gnome.png" />
+    <None Include="Resource\img\title\bg.png" />
+    <None Include="Resource\img\title\mode1.png" />
+    <None Include="Resource\img\title\mode2.png" />
+    <None Include="Resource\img\title\mode3.png" />
+    <None Include="Resource\img\title\text.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
