--- a/stima_taxi.vcxproj
+++ b/stima_taxi.vcxproj
@@ -50,12 +50,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\kantor\SFML-2.1\include;C:\Program1\SFML\SFML-2.1\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>SFML-2.1\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\kantor\SFML-2.1\lib;C:\Program1\SFML\SFML-2.1\lib;</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>SFML-2.1\lib;</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;sfml-main-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
