--- a/stima_taxi.vcxproj.filters
+++ b/stima_taxi.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Cities.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Algorithm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.hpp">
@@ -102,6 +105,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Cities.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Algorithm.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
