--- a/stima_taxi.vcxproj
+++ b/stima_taxi.vcxproj
@@ -93,6 +93,7 @@
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
+    <ClCompile Include="Taxi.cpp" />
     <ClCompile Include="TitleState.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -110,6 +111,7 @@
     <ClInclude Include="Point.hpp" />
     <ClInclude Include="Rectangle.hpp" />
     <ClInclude Include="ResourceManager.hpp" />
+    <ClInclude Include="Taxi.hpp" />
     <ClInclude Include="TitleState.hpp" />
   </ItemGroup>
   <ItemGroup>
